2015-07-04  Devin Rousso  <drousso@apple.com>

        Web Inspector: Wrong cursor position in styles panel when deleting a line break
        https://bugs.webkit.org/show_bug.cgi?id=146577

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/CSSStyleDeclarationTextEditor.js:
        (WebInspector.CSSStyleDeclarationTextEditor):
        (WebInspector.CSSStyleDeclarationTextEditor.prototype._handleBeforeChange): If the change is a deletion at the beginning of a line,
        remove all markers on that line to ensure that there is no blank space on the previous line after deleting.

2015-07-04  Devin Rousso  <drousso@apple.com>

        Web Inspector: Pressing tab on a newline in the console should insert a tab character
        https://bugs.webkit.org/show_bug.cgi?id=146612

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/ConsolePrompt.js:
        (WebInspector.ConsolePrompt.prototype._handleTabKey): Tabs can now be inserted at the beginning of newlines and before the first
        non-space character on any other line.

2015-07-04  Devin Rousso  <drousso@apple.com>

        Web Inspector: Pressing enter on a newline in the styles sidebar inserts a semicolon
        https://bugs.webkit.org/show_bug.cgi?id=146611

        Reviewed by Timothy Hatcher.

        * UserInterface/Views/CSSStyleDeclarationTextEditor.js:
        (WebInspector.CSSStyleDeclarationTextEditor.prototype._handleEnterKey): Now returns if the line is empty.

2015-07-04  Devin Rousso  <drousso@apple.com>

        Web Inspector: Console should indicate if you have unseen messages in console due to filters
        https://bugs.webkit.org/show_bug.cgi?id=143166

        Reviewed by Timothy Hatcher.

        * UserInterface/Controllers/JavaScriptLogViewController.js:
        (WebInspector.JavaScriptLogViewController.prototype.updatePreviousMessageRepeatCount): Now returns true/false depending on if
        the message count was actually updated.