@@ -1,3 +1,14 @@
+2015-07-05  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: CSS rule with 2 pseudo-selectors appears twice
+        https://bugs.webkit.org/show_bug.cgi?id=146576
+
+        Reviewed by Timothy Hatcher.
+
+        * UserInterface/Views/RulesStyleDetailsPanel.js:
+        (WebInspector.RulesStyleDetailsPanel.prototype.refresh):
+        Only adds pseudo-elements if the previous pseudo-element has a different selector.
+
 2015-07-04  Devin Rousso  <drousso@apple.com>
 
         Web Inspector: Wrong cursor position in styles panel when deleting a line break
